added some styles to medieval section

--- a/css/med.css
+++ b/css/med.css
@@ -1,3 +1,73 @@
-.hidden {
-  display: none;
+/* base stylesheet for all pages */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+/* color theme */
+:root {
+  --white: #FFF2EA;
+  --brown: #FED9A2;
+  --orange: #FDBB71;
+  --red: #ED6F27;
+  --green: #14706B;
+}
+
+/* base css  */
+html {
+  background-color: var(--white);
+  width: 100vw;
+  height: 100vh;
+};
+
+
+h2 {
+  font-size: 25px;
+  line-height: 2px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-items: flex-start;
+  margin: 3rem 2rem 1rem 2rem;
+  /* margin-top: 4rem;
+  margin-bottom: 1rem; */
+  font-size: 18px;
+  width: auto;
+  font-family: 'Roboto', sans-serif;
+
+  }
+
+.title {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-style: medium;
+  display: flex;
+  justify-content: center;
+}
+
+#progress-bar {
+  width: 100%;
+  height: 0.5rem;
+  background-color: grey;
+  border-radius: 20px;
+}
+
+#question {
+  font-size: 25px;
+  font-style: normal;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+button {
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--brown);
+  border: none;
+  border-radius: 20px;
+  font-size: 18px;
+  padding: 0.5rem 1rem;
 }
