--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,14 @@ html {
   width: 100vw;
   height: 100vh;
 }
+
 #main {
 display: flex;
 flex-direction: column;
 justify-items: flex-start;
-margin: 2rem;
-margin-top: 4rem;
-margin-bottom: 1rem;
+margin: 3rem 2rem 1rem 2rem;
+/* margin-top: 4rem;
+margin-bottom: 1rem; */
 font-size: 18px;
 width:auto;
 font-family: 'Roboto', sans-serif;
